fixed horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,20 @@ main {
   padding-top: 60px;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .hero-image {
   max-width: 100%;
 }
 
 .hero-info {
   max-width: 700px;
+}
+
+.hero-canvas {
+  overflow: hidden
 }
 
 .hero-canvas > canvas:nth-of-type(2) {
@@ -79,21 +87,10 @@ main {
   border: 1px solid #2b2734;
 }
 
-.footer {
+.footer-background {
   background: #2b2734;
   color: #fff;
   position: relative;
-}
-
-.footer:before {
-  content: '';
-  background: #2b2734;
-  width: 10000px;
-  min-height: 156px;
-  z-index: -1;
-  position: absolute;
-  bottom: 0;
-  left: -1000px;
 }
 
 .footer-row {
